Initial litlist split

--- a/atuaref2.tex
+++ b/atuaref2.tex
@@ -2078,7 +2078,7 @@ $p_0 = 2.8$, $U_p=1.9$, $\omega_p=0.04$.
 рівень коливань, і отже, гірші результати пошуку. При цьому, інші підходи до
 визначення $ p_\mathrm{id} $ демонструють схожі між собою результати.
 
-\begin{figure}[h!]
+\begin{figure}[ht!]
   \centerline{
     \includegraphics[width=0.45\textwidth]{p5/p/cha/spr_a/qAuv5.3r/sprott_a_qAuv5_3r_qx2-p_t_pi_sign.png}
     \hfill
@@ -2093,7 +2093,7 @@ $p_0 = 2.8$, $U_p=1.9$, $\omega_p=0.04$.
 FAlv5.3r.$q_{x^2}$.
 
 
-\begin{figure}[h!]
+\begin{figure}[ht!]
   \centerline{
     \includegraphics[width=0.45\textwidth]{p5/p/cha/spr_a/FAlv5.3A/sprott_a_FAlv5x3r-pl_n_sign.png}
     \hfill
@@ -2543,12 +2543,22 @@ $V_{\mathrm{on},i}$, $V_{\mathrm{off},i}$.
 \end{itemize}
 
 
-\xsect{СПИСОК ОПУБЛІКОВАНИХ ПРАЦЬ ЗА ТЕМОЮ ДИСЕРТАЦІЇ}
 
 \nocite{*}
 
-\printbibliography[heading=none]
+\xsect{Список опублікованих праць за темою дисертації у наукометрічних виданнях}
 
+\printbibliography[heading=none, keyword=scimetr]
+
+
+\xsect{СПИСОК ОПУБЛІКОВАНИХ ПРАЦЬ ЗА ТЕМОЮ ДИСЕРТАЦІЇ 2}
+
+\printbibliography[heading=none, keyword=vak]
+
+
+\xsect{Тези доповідей на наукових конференціях}
+
+\printbibliography[heading=none, keyword=confer]
 
 
 
