--- a/atuworks.bib
+++ b/atuworks.bib
@@ -30,6 +30,7 @@
 @Article{atu_asau10,
   title = {Информационные оценки сложности задачи параметрической идентификации динамических систем},
   author = atum,
+  keywords = {atuw, vak},
   xdata = {asau},
   language     = {russian},
   langid       = {russian},
@@ -42,6 +43,7 @@
   title = {Синтез критерия идентификации нелинейных динамических систем на физических принципах},
   xdata = {asau},
   author = {Гуда, А. И. and Михалёв, А. И. and Новикова, Е. Ю.},
+  keywords = {atuw, vak},
   language     = {russian},
   langid       = {russian},
   year = {2008},
@@ -54,6 +56,7 @@
   title = {Адаптивно-поисковая идентификация хаотической динамической системы Дуффинга},
   xdata = {asau},
   author = atum,
+  keywords = {atuw, vak},
   language     = {russian},
   langid       = {russian},
   year = {2008},
@@ -65,6 +68,7 @@
 %  title = {Исследование правил клеточных автоматов для моделирования процессов затвердевания квазиравновесных бинарных сплавов},
 %  journal = {Автоматика. Автоматизація. Электротехнические Комплексы и Системы – ААЭКС.},
 %  author = {Михайловская, Т. В. and Михалёв, А. И. and Гуда, А. И.},
+%  keywords = {atuw, vak},
 %  language     = {russian},
 %  langid       = {russian},
 %  year = {2008},
@@ -76,6 +80,7 @@
 %@Article{atu_asau13,
 %  title = {Использование методов нечеткого вывода для оценки тяжести  общего состояния больных разлитым перитонитом},
 %  author = {Новикова, Е. Ю. and Кутовой, А. Б. and Михалёв, А. И. and Гуда, А. И. },
+%  keywords = {atuw, vak},
 %  language     = {russian},
 %  langid       = {russian},
 %  xdata = {asau},
@@ -89,6 +94,7 @@
   title = {Адаптивно-поисковая идентификация хаотической динамической системы Рёсслера},
   xdata = {asau},
   author = atum,
+  keywords = {atuw, scimetr},
   language     = {russian},
   langid       = {russian},
   year = {2009},
@@ -101,6 +107,7 @@
 @Article{atu_khar_autodor25,
   title = {Критерии идентификации параметров хаотической динамики управляемого объекта},
   author = {Гуда, А. И. and Михалёв, А. И. and Деревянко, А. И.},
+  keywords = {atuw, scimetr},
   journal = {Автомобільний транспорт.  -- Вісник Харківського національного автодорожнього університету.},
   language     = {russian},
   langid       = {russian},
@@ -114,6 +121,7 @@
   title = {Влияние возмущений входного сигнала на динамику и идентификацию нелинейной  системы {Дуффинга}},
   xdata = {asau},
   author = atum,
+  keywords = {atuw, scimetr},
   language     = {russian},
   langid       = {russian},
   year = {2010},
@@ -126,6 +134,7 @@
   title = {Выбор критерия при адаптивно-поисковой идентификации динамической системы Ван-Дер-Поля},
   xdata = {asau},
   author = atum,
+  keywords = {atuw, scimetr},
   language     = {russian},
   langid       = {russian},
   year = {2010},
@@ -139,6 +148,7 @@
   title = {Исследование альтернативного критерия при адаптивно-поисковой идентификации динамической системы Ван-Дер-Поля},
   xdata = {asau},
   author = atum,
+  keywords = {atuw, scimetr},
   language     = {russian},
   langid       = {russian},
   year = {2010},
@@ -151,6 +161,7 @@
   title = {Сравнительный анализ двух критериев адаптивно-поисковой идентификации нелинейной динамической системи Ван-Дер-Поля},
   xdata = {st},
   author = atum,
+  keywords = {atuw, vak},
   language     = {russian},
   langid       = {russian},
   year = {2011},
@@ -164,6 +175,7 @@
   title = {Синтез критерия при адаптивно-поисковой идентификации динамической системы Чуа},
   xdata = {asau},
   author = atum,
+  keywords = {atuw, scimetr},
   language     = {russian},
   langid       = {russian},
   year = {2011},
@@ -174,6 +186,7 @@
 @Article{atu_st67,
   title = {Особенности моделирования и идентификации хаотической системы Ресслера с возмущениями},
   author = {Гуда, А. И. and Михалёв, А. И. and Дмитриева, И. С.},
+  keywords = {atuw, vak},
   xdata = {st},
   language     = {russian},
   langid       = {russian},
@@ -187,6 +200,7 @@
   title = {Моделирование и исследование хаотической динамики связанных релаксационных генераторов},
   xdata = {asau},
   author = atum,
+  keywords = {atuw, scimetr},
   language     = {russian},
   langid       = {russian},
   year = {2011},
@@ -198,6 +212,7 @@
   title = {Физические основы при синтезе критерия адаптивно-поисковой идентификации динамической системы Лоренса},
   xdata = {st},
   author = atum,
+  keywords = {atuw, vak},
   language     = {russian},
   langid       = {russian},
   year = {2012},
@@ -209,6 +224,7 @@
   title = {Chaotic system with relay hysteresis in return force: simulation and analysis},
   xdata = {st_ik},
   author = atume,
+  keywords = {atuw, vak},
   language     = {english},
   year = {2013},
   number = {2(85)},
@@ -220,6 +236,7 @@
   title = {Моделирование хаотической динамики системы с зоной нечувствительности и идентификация её параметров},
   xdata = {asau},
   author = atum,
+  keywords = {atuw, scimetr},
   language     = {russian},
   langid       = {russian},
   year = {2012},
@@ -232,6 +249,7 @@
   title = {Генератор Колпитца: моделирование хаотической динамики и параметрическая идентификация},
   xdata = {asau},
   author = atum,
+  keywords = {atuw, scimetr},
   language     = {russian},
   langid       = {russian},
   year = {2012},
@@ -242,6 +260,7 @@
 @Article{atu_st91,
   title = {Influence of input and measurement noise to Lorenz system adaptive-searching identification},
   author = atume,
+  keywords = {atuw, vak},
   xdata = {st_ik},
   year = {2014},
   language     = {russian},
@@ -255,6 +274,7 @@
   title = {Настройка адаптивно-поисковой системы идентификации применительно к хаотическим объектам},
   xdata = {asau},
   author = atum,
+  keywords = {atuw, scimetr},
   language     = {russian},
   langid       = {russian},
   year = {2013},
@@ -268,6 +288,7 @@
   title = {Расширение рабочего диапазона поисковой идентификации нелинейных динамических систем},
   xdata = {asau},
   author = atum,
+  keywords = {atuw, scimetr},
   language     = {russian},
   langid       = {russian},
   year = {2013},
@@ -281,6 +302,7 @@
   title = {Повышение качества фильтрации при поисковой идентификации нелинейных динамических систем},
   xdata = {asau},
   author = atum,
+  keywords = {atuw, scimetr},
   language     = {russian},
   langid       = {russian},
   year = {2014},
@@ -291,6 +313,7 @@
 @Article{atu_electronika2013,
   title = {Physical background in identification criterion synthesis},
   author = {Guda, A. I and Mikhalyov, A. I. and Derevjanko, A. I.  and Kisała, P },
+  keywords = {atuw, vak},
   journal = {Elektronika  konstrukcje, technologie, zastosowania (Index Copernicus)},
   language     = {english},
   langid       = {english},
@@ -303,6 +326,7 @@
 @Article{atu_kher2014,
   title = {Расширение рабочего диапазона при поисковой идентификации хаотической системы Чуа},
   author = atum,
+  keywords = {atuw, scimetr},
   journal = kher,
   language     = {russian},
   langid       = {russian},
@@ -318,6 +342,7 @@
   title = {Использование нечётких технологий при выборе начальных условий  в задачах идентификации систем с хаотической динамикой},
   xdata = {asau},
   author = atum,
+  keywords = {atuw, scimetr},
   language     = {russian},
   langid       = {russian},
   year = {2014},
@@ -329,6 +354,7 @@
   title = {Multi-model methods and parameters estimation approaches on non-linear dynamic system identification},
   xdata = {st_ik},
   author = atume,
+  keywords = {atuw, vak},
   language     = {english},
   year = {2015},
   number = {4(99)},
@@ -340,6 +366,7 @@
   title = {Использование метода идентификации с множеством подвижных моделей применительно к динамической системе Лоренса},
   xdata = {asau},
   author = atum,
+  keywords = {atuw, scimetr},
   language     = {russian},
   langid       = {russian},
   year = {2015},
@@ -349,9 +376,11 @@
 
 
 
+% РИНЦ
 @Article{atu_arsirii,
   title = {Система поддержки принятия решений по повышению эффективности гидроаеродинамических процессов во вспомогательных элементах    энергетических агрегатов},
   author = {Арсирий, Е. А. and  Антощук, С. Г. and Арсирий, В. А. and Гуда, А. И. },
+  keywords = {atuw, scimetr},
   journal = {Управляющие системы и машины (РИНЦ)},
   language     = {russian},
   langid       = {russian},
@@ -366,6 +395,7 @@
 @Article{atu_kher2015,
   title = {Настройка параметров системы мультимодельной адаптивно-поисковой системы идентификации},
   author = atum,
+  keywords = {atuw, scimetr},
   journal = kher,
   language     = {russian},
   langid       = {russian},
@@ -378,6 +408,7 @@
   title = {Multi-model methods and parameters estimation approaches on non-linear dynamic system identification},
   xdata = {st_ik},
   author = atume,
+  keywords = {atuw, scimetr},
   language     = {english},
   year = {2016},
   number = {2(103)},
@@ -388,6 +419,7 @@
   title = {Визначення гранулометричного складу матеріалу у повітряному потоці з використанням діаграм Пуанкаре},
   xdata = {st_ik},
   author = {Сухомлин, Р. О. and Михальов, А. И. and  Прядко, Н. С. and Тернова, К. В. and Гуда, А. И.},
+  keywords = {atuw, scimetr},
   language     = {russian},
   langid       = {russian},
   year = {2016},
@@ -399,6 +431,7 @@
   title = {A low-voltage coupled relaxation generator with chaotic behavior: simulation, measurement and identification},
   xdata = {st_ik},
   author = {Гуда, А. И.},
+  keywords = {atuw, scimetr},
   language     = {english},
   langid       = {english},
   year = {2016},
@@ -410,6 +443,7 @@
   title = {Three-model methods for extremum extimation in non-linear dynamic system identification},
   xdata = {asau},
   author = atume,
+  keywords = {atuw, scimetr},
   language     = {english},
   langid       = {english},
   year = {2016},
@@ -421,6 +455,7 @@
   title = {Multi-model identification system properties near extremum: simulations and analysis},
   journal = {Journal of Applied Computer Science – JACS-2015},
   author = atume,
+  keywords = {atuw, vak},
   language     = {english},
   langid       = {english},
   year = {2015},
@@ -432,6 +467,7 @@
   title = {Особливості використання HX711 для отримання даних з тензодатчика},
   xdata = {st_ik},
   author = {Зимогляд, А. Ю. and Гуда, А. И.},
+  keywords = {atuw, scimetr},
   language     = {russian},
   langid       = {russian},
   year = {2016},
@@ -443,6 +479,7 @@
   title = {Виявлення залежності кута повороту сервоприводу від вхідного імпульсу},
   xdata = {st_ik},
   author = {Левченко, Д.О. and Гуда, А. И.},
+  keywords = {atuw, scimetr},
   language     = {russian},
   langid       = {russian},
   year = {2016},
@@ -454,6 +491,7 @@
 @Article{atu_kher2016,
   title = {Синтез критерия для идентификации хаотической системы ``Sprott A'' с использованием мультимодельного адаптивно-поискового метода},
   author = atum,
+  keywords = {atuw, scimetr},
   journal = kher,
   language     = {russian},
   langid       = {russian},
@@ -467,6 +505,7 @@
 @Article{atu_ric2016,
   title = {Multi-models identification methods comparison in the non-linear dynamic system identification task},
   author = atume,
+  keywords = {atuw, scimetr},
   journal = {Радиоэлектроника, информатика, управление (Web of Science)},
   location = {Запоріжжя, ЗНТУ},
   language     = {english},
@@ -481,6 +520,7 @@
   booktitle = {Коллективная монография ``Системные технологии моделирования сложных систем'' под. ред. Михалёва~А.И.},
   title = {Оценивание эффективности применения интегральных критериев в задачах параметрической идентификации хаотических систем},
   author = atum,
+  keywords = {atuw, vak},
   location = {Днепр},
   language     = {russian},
   langid       = {russian},
@@ -494,6 +534,7 @@
 @Inproceedings{atu_ich2011,
   title = {Выбор критериев для оценки эффективности процессов идентификации систем с хаотической динамикой },
   author = atum,
+  keywords = {atuw, confer},
   language     = {russian},
   langid       = {russian},
   booktitle = { Матеріали Всеукраїнської науково-практичної конференції ``Інформатика та системні науки'' (ІСН-2011). – Полтава, 17-19.03.2011. – Полтава: РВВ ПУЕТ},
@@ -504,6 +545,7 @@
 @Inproceedings{atu_ISDMCI2011,
   title = {Идентификация систем с хаотической динамикой},
   author = atum,
+  keywords = {atuw, confer},
   xdata = {ISDMCI},
   language     = {russian},
   langid       = {russian},
@@ -516,6 +558,7 @@
 @Inproceedings{atu_itcs2011,
   title = {Адаптивно-поисковая идентификация нелинейной динамической системы Ван-дер-Поля},
   author = atum,
+  keywords = {atuw, confer},
   booktitle = {Информационные технологии в управлении сложными системами. Сборник докладов научной конференции -- Днепропетровск: изд-во ``Свидлер А.Л.''},
   location = {Днепропетровск},
   language     = {russian},
@@ -529,6 +572,7 @@
   title = {Адаптивно-поисковая идентификация нелинейной хаотической системы Чуа},
   booktitle = apir,
   author = atum,
+  keywords = {atuw, confer},
   language     = {russian},
   langid       = {russian},
   eventdate = {2011-09},
@@ -541,6 +585,7 @@
   title = {Альтернативный критерий идентификации хаотической системы Рёсслера},
   xdata = {ISDMCI},
   author = atum,
+  keywords = {atuw, confer},
   language     = {russian},
   langid       = {russian},
   year = {2012},
@@ -551,6 +596,7 @@
   title = {Синтез критерия идентификации нелинейной хаотической системы Лоренса},
   booktitle = apir,
   author = atum,
+  keywords = {atuw, confer},
   language     = {russian},
   langid       = {russian},
   year = {2012},
@@ -562,6 +608,7 @@
 @Inproceedings{atu_ISDMCI2013,
   title = {Хаотические колебательные системы с зоной нечувствительности и релейным гистерезисом в восстанавливающей силе},
   author = atum,
+  keywords = {atuw, confer},
   xdata = {ISDMCI},
   language     = {russian},
   langid       = {russian},
@@ -572,6 +619,7 @@
 @Inproceedings{atu_apir2013,
   title = {Идентификация бифуркационного параметра генератора Колптица},
   author = atum,
+  keywords = {atuw, confer},
   booktitle = apir,
   language     = {russian},
   langid       = {russian},
@@ -584,6 +632,7 @@
 @Inproceedings{atu_ISDMCI2014,
   title = {Совместное влияние изменений параметров системы адаптивно-поисковой идентификации хаотических систем объектов  на процесс поиска},
   author = atum,
+  keywords = {atuw, confer},
   xdata = {ISDMCI},
   language     = {russian},
   langid       = {russian},
@@ -595,6 +644,7 @@
   title = {Применение многомодельного метода в задаче параметрической  идентификации хаотической системы Лоренса},
   xdata = {ISDMCI},
   author = atum,
+  keywords = {atuw, confer},
   language     = {russian},
   langid       = {russian},
   year = {2015},
@@ -604,6 +654,7 @@
 @Inproceedings{atu_csit2015,
   title = {Method of Lorenz systems parametric identification by the searching models ensemble},
   author = atume,
+  keywords = {atuw, confer},
   booktitle = {Scientific and Technical Conference ``Computer Sciences and Information Technologies'' (CSIT) (Scopus)},
   language     = {english},
   langid       = {english},
@@ -616,6 +667,7 @@
   title = {Применение различных функций качества идентификации при использовании ансамбля поисковых агентов в задаче идентификации нелинейных динамических систем},
   xdata = {ISDMCI},
   author = atum,
+  keywords = {atuw, confer},
   language     = {russian},
   langid       = {russian},
   year = {2016},
@@ -626,6 +678,7 @@
 @Inproceedings{atu_DSMP2016,
   title = {Criteria synthesis problem for the chaotic systems identification},
   author = atume,
+  keywords = {atuw, confer},
   booktitle = {Proceedings of the 2016 IEEE 1st International Conference on Data Stream Mining and Processing, DSMP 2016, (Web of Science, Scopus, РИНЦ)},
   location = {Lviv, Ukraine},
   language     = {english},
