Fix aref lit order (first stage)

--- a/atuaref2.tex
+++ b/atuaref2.tex
@@ -496,7 +496,7 @@ XX найменувань,
 Особливість динаміки хаотичних систем не дозволяє визначити мету ідентифікації
 як задачу мінімізації будь-якої міри
 $ \mu (x_o (t), x_i (t)) $ в просторі
-вихідних сигналів~\cite{atu_asau11, atu_asau12, atu_asau14}.
+вихідних сигналів.% ~\cite{atu_asau11, atu_asau12, atu_asau14}.
 
 Отже, для синтезу системи ідентифікації необхідно існування заданого скалярного
 критерію $q(x(t)) $, близькість величин яких для об'єкта і моделі (в сенсі
@@ -1314,8 +1314,8 @@ $ v_f = 1 / \nu $ --- коефіцієнт
 
 
 Розглянемо набір підходів до визначення пошуковим координатором точки максимуму
-функції якості, а отже --- значення ідентифікованого параметра
-\cite{atu_st99,atu_jacs2015}.
+функції якості, а отже --- значення ідентифікованого параметра.
+%\cite{atu_st99,atu_jacs2015}.
 
 З усього списку вихідних сигналів пошукових агентів координатор використовує
 тільки необхідну йому підмножину. У якості координати може використовуватися як
@@ -1350,7 +1350,7 @@ $p_\mathrm{id}(t)$.
 реалізувати ідентифікацію для будь-якого
 $ p_o \in [p_{\min} , p_{\max}]$ при нерухомих агентів.
 
-Наступний метод --- реалізація методу COG (Center of gravity, Такагі-Сугено \cite{atu_asau25,atu_csit2015,atu_asau16}),
+Наступний метод --- реалізація методу COG (Center of gravity, Такагі-Сугено % \cite{atu_asau25,atu_csit2015,atu_asau16}),
 використовуваного при дефазифікації систем нечіткої логіки для всього
 ансамблю:
 %
@@ -2245,7 +2245,7 @@ $ \mu \in [ 1.29 ; 5.6 ] $.
 висновків про співвідношення між параметрами моделі і об'єкта. Одним із
 прикладів таких систем є динамічна система (\ref{atu:eq:dryfric_sys}), що
 моделює поведінку тіла заданої маси під дією зовнішньої сили, що змушує і сили
-сухого тертя~\cite{atu_asau11}:
+сухого тертя: %~\cite{atu_asau11}:
 %
 \begin{equation}
   m \ddot{x} + f_{df}( x, \dot{x}, \ldots)  = u(t).
@@ -2554,6 +2554,7 @@ $V_{\mathrm{on},i}$, $V_{\mathrm{off},i}$.
 \xsect{СПИСОК ОПУБЛІКОВАНИХ ПРАЦЬ ЗА ТЕМОЮ ДИСЕРТАЦІЇ 2}
 
 \printbibliography[heading=none, keyword=vak]
+
 
 
 \xsect{Тези доповідей на наукових конференціях}
