--- a/atuworks.bib
+++ b/atuworks.bib
@@ -27,68 +27,6 @@
   publisher = {ХНТУ},
 }
 
-@Article{atu_asau10,
-  title = {Информационные оценки сложности задачи параметрической идентификации динамических систем},
-  author = atum,
-  keywords = {atuw, vak},
-  xdata = {asau},
-  language     = {russian},
-  langid       = {russian},
-  year = {2007},
-  number = {10(30)},
-  pages = {96--103}
-}
-
-@Article{atu_asau11,
-  title = {Синтез критерия идентификации нелинейных динамических систем на физических принципах},
-  xdata = {asau},
-  author = {Гуда, А. И. and Михалёв, А. И. and Новикова, Е. Ю.},
-  keywords = {atuw, vak},
-  language     = {russian},
-  langid       = {russian},
-  year = {2008},
-  number = {11(31)},
-  pages = {136--142}
-}
-
-% РИНЦ, elib
-@Article{atu_asau12,
-  title = {Адаптивно-поисковая идентификация хаотической динамической системы Дуффинга},
-  xdata = {asau},
-  author = atum,
-  keywords = {atuw, vak},
-  language     = {russian},
-  langid       = {russian},
-  year = {2008},
-  number = {12(32)},
-  pages = {166--171}
-}
-
-%@Article{atu_aaeks22,
-%  title = {Исследование правил клеточных автоматов для моделирования процессов затвердевания квазиравновесных бинарных сплавов},
-%  journal = {Автоматика. Автоматизація. Электротехнические Комплексы и Системы – ААЭКС.},
-%  author = {Михайловская, Т. В. and Михалёв, А. И. and Гуда, А. И.},
-%  keywords = {atuw, vak},
-%  language     = {russian},
-%  langid       = {russian},
-%  year = {2008},
-%  number = {2(22)},
-%  pages = {19--27}
-%}
-
-%% РИНЦ, elib
-%@Article{atu_asau13,
-%  title = {Использование методов нечеткого вывода для оценки тяжести  общего состояния больных разлитым перитонитом},
-%  author = {Новикова, Е. Ю. and Кутовой, А. Б. and Михалёв, А. И. and Гуда, А. И. },
-%  keywords = {atuw, vak},
-%  language     = {russian},
-%  langid       = {russian},
-%  xdata = {asau},
-%  year = {2008},
-%  number = {13(33)},
-%  pages = {159--165}
-%}
-
 % РИНЦ, elib
 @Article{atu_asau14,
   title = {Адаптивно-поисковая идентификация хаотической динамической системы Рёсслера},
@@ -101,7 +39,6 @@
   number = {14(34)},
   pages = {125--129}
 }
-
 
 % TODO: Copernicus? РИНЦ, elib
 @Article{atu_khar_autodor25,
@@ -157,19 +94,6 @@
 }
 
 
-@Article{atu_st75,
-  title = {Сравнительный анализ двух критериев адаптивно-поисковой идентификации нелинейной динамической системи Ван-Дер-Поля},
-  xdata = {st},
-  author = atum,
-  keywords = {atuw, vak},
-  language     = {russian},
-  langid       = {russian},
-  year = {2011},
-  number = {4(75)},
-  pages = {15--20}
-}
-
-
 % РИНЦ, elib
 @Article{atu_asau18,
   title = {Синтез критерия при адаптивно-поисковой идентификации динамической системы Чуа},
@@ -183,18 +107,6 @@
   pages = {140--146}
 }
 
-@Article{atu_st67,
-  title = {Особенности моделирования и идентификации хаотической системы Ресслера с возмущениями},
-  author = {Гуда, А. И. and Михалёв, А. И. and Дмитриева, И. С.},
-  keywords = {atuw, vak},
-  xdata = {st},
-  language     = {russian},
-  langid       = {russian},
-  year = {2010},
-  number = {2(67)},
-  pages = {114--118}
-}
-
 % РИНЦ, elib
 @Article{atu_asau19,
   title = {Моделирование и исследование хаотической динамики связанных релаксационных генераторов},
@@ -206,29 +118,6 @@
   year = {2011},
   number = {19(39)},
   pages = {164--170}
-}
-
-@Article{atu_st79,
-  title = {Физические основы при синтезе критерия адаптивно-поисковой идентификации динамической системы Лоренса},
-  xdata = {st},
-  author = atum,
-  keywords = {atuw, vak},
-  language     = {russian},
-  langid       = {russian},
-  year = {2012},
-  number = {2(79)},
-  pages = {13--19}
-}
-
-@Article{atu_st85,
-  title = {Chaotic system with relay hysteresis in return force: simulation and analysis},
-  xdata = {st_ik},
-  author = atume,
-  keywords = {atuw, vak},
-  language     = {english},
-  year = {2013},
-  number = {2(85)},
-  pages = {30--35}
 }
 
 % РИНЦ, elib
@@ -255,18 +144,6 @@
   year = {2012},
   number = {21(41)},
   pages = {146--153}
-}
-
-@Article{atu_st91,
-  title = {Influence of input and measurement noise to Lorenz system adaptive-searching identification},
-  author = atume,
-  keywords = {atuw, vak},
-  xdata = {st_ik},
-  year = {2014},
-  language     = {russian},
-  langid       = {russian},
-  number = {2(91)},
-  pages = {154--158}
 }
 
 % РИНЦ, elib
@@ -313,7 +190,7 @@
 @Article{atu_electronika2013,
   title = {Physical background in identification criterion synthesis},
   author = {Guda, A. I and Mikhalyov, A. I. and Derevjanko, A. I.  and Kisała, P },
-  keywords = {atuw, vak},
+  keywords = {atuw, scimetr},
   journal = {Elektronika  konstrukcje, technologie, zastosowania (Index Copernicus)},
   language     = {english},
   langid       = {english},
@@ -335,8 +212,6 @@
   pages = {265--258}
 }
 
-
-
 % РИНЦ, elib
 @Article{atu_asau25,
   title = {Использование нечётких технологий при выборе начальных условий  в задачах идентификации систем с хаотической динамикой},
@@ -350,11 +225,23 @@
   pages = {98--103}
 }
 
+@Article{atu_st91,
+  title = {Influence of input and measurement noise to Lorenz system adaptive-searching identification},
+  author = atume,
+  keywords = {atuw, scimetr},
+  xdata = {st_ik},
+  year = {2014},
+  language     = {russian},
+  langid       = {russian},
+  number = {2(91)},
+  pages = {154--158}
+}
+
 @Article{atu_st99,
   title = {Multi-model methods and parameters estimation approaches on non-linear dynamic system identification},
   xdata = {st_ik},
   author = atume,
-  keywords = {atuw, vak},
+  keywords = {atuw, scimetr},
   language     = {english},
   year = {2015},
   number = {4(99)},
@@ -455,7 +342,7 @@
   title = {Multi-model identification system properties near extremum: simulations and analysis},
   journal = {Journal of Applied Computer Science – JACS-2015},
   author = atume,
-  keywords = {atuw, vak},
+  keywords = {atuw, scimetr},
   language     = {english},
   langid       = {english},
   year = {2015},
@@ -515,6 +402,125 @@
   doi = {10.15588/1607-3274-2016-4-14},
   pages = {112--119}
 }
+
+
+% -------------------------- vak -----------------------------------------
+
+
+@Article{atu_asau10,
+  title = {Информационные оценки сложности задачи параметрической идентификации динамических систем},
+  author = atum,
+  keywords = {atuw, vak},
+  xdata = {asau},
+  language     = {russian},
+  langid       = {russian},
+  year = {2007},
+  number = {10(30)},
+  pages = {96--103}
+}
+
+@Article{atu_asau11,
+  title = {Синтез критерия идентификации нелинейных динамических систем на физических принципах},
+  xdata = {asau},
+  author = {Гуда, А. И. and Михалёв, А. И. and Новикова, Е. Ю.},
+  keywords = {atuw, vak},
+  language     = {russian},
+  langid       = {russian},
+  year = {2008},
+  number = {11(31)},
+  pages = {136--142}
+}
+
+% РИНЦ, elib
+@Article{atu_asau12,
+  title = {Адаптивно-поисковая идентификация хаотической динамической системы Дуффинга},
+  xdata = {asau},
+  author = atum,
+  keywords = {atuw, vak},
+  language     = {russian},
+  langid       = {russian},
+  year = {2008},
+  number = {12(32)},
+  pages = {166--171}
+}
+
+%@Article{atu_aaeks22,
+%  title = {Исследование правил клеточных автоматов для моделирования процессов затвердевания квазиравновесных бинарных сплавов},
+%  journal = {Автоматика. Автоматизація. Электротехнические Комплексы и Системы – ААЭКС.},
+%  author = {Михайловская, Т. В. and Михалёв, А. И. and Гуда, А. И.},
+%  keywords = {atuw, vak},
+%  language     = {russian},
+%  langid       = {russian},
+%  year = {2008},
+%  number = {2(22)},
+%  pages = {19--27}
+%}
+
+%% РИНЦ, elib
+%@Article{atu_asau13,
+%  title = {Использование методов нечеткого вывода для оценки тяжести  общего состояния больных разлитым перитонитом},
+%  author = {Новикова, Е. Ю. and Кутовой, А. Б. and Михалёв, А. И. and Гуда, А. И. },
+%  keywords = {atuw, vak},
+%  language     = {russian},
+%  langid       = {russian},
+%  xdata = {asau},
+%  year = {2008},
+%  number = {13(33)},
+%  pages = {159--165}
+%}
+
+@Article{atu_st75,
+  title = {Сравнительный анализ двух критериев адаптивно-поисковой идентификации нелинейной динамической системи Ван-Дер-Поля},
+  xdata = {st},
+  author = atum,
+  keywords = {atuw, vak},
+  language     = {russian},
+  langid       = {russian},
+  year = {2011},
+  number = {4(75)},
+  pages = {15--20}
+}
+
+
+@Article{atu_st67,
+  title = {Особенности моделирования и идентификации хаотической системы Ресслера с возмущениями},
+  author = {Гуда, А. И. and Михалёв, А. И. and Дмитриева, И. С.},
+  keywords = {atuw, vak},
+  xdata = {st},
+  language     = {russian},
+  langid       = {russian},
+  year = {2010},
+  number = {2(67)},
+  pages = {114--118}
+}
+
+@Article{atu_st79,
+  title = {Физические основы при синтезе критерия адаптивно-поисковой идентификации динамической системы Лоренса},
+  xdata = {st},
+  author = atum,
+  keywords = {atuw, vak},
+  language     = {russian},
+  langid       = {russian},
+  year = {2012},
+  number = {2(79)},
+  pages = {13--19}
+}
+
+@Article{atu_st85,
+  title = {Chaotic system with relay hysteresis in return force: simulation and analysis},
+  xdata = {st},
+  author = atume,
+  keywords = {atuw, vak},
+  language     = {english},
+  year = {2013},
+  number = {2(85)},
+  pages = {30--35}
+}
+
+
+
+% ------------------- coll. mono -----------------------------
+
 
 @Inbook{atu_colmono2016,
   booktitle = {Коллективная монография ``Системные технологии моделирования сложных систем'' под. ред. Михалёва~А.И.},
