--- a/p1/p1.tex
+++ b/p1/p1.tex
@@ -1,6 +1,8 @@
 \chapter{Обзор состояния проблемы и постановка задачи исследования}
 
-Обзор он и есть обзор
+Когда обратили внимание на сдх.
+
+Где встречаются в реальном мире.
 
 \section{Основные понятия задачи идентификации динамических систем} % {{{1
 
@@ -172,4 +174,4 @@ c) упрощённая форма варианта b) -- ограничение
 % }}}1
 
 
-% vim: fdm=marker ft=tex
+% vim: fdm=marker foldlevel=1 foldignore="%#" fdc=4 ft=tex
