--- a/p5/spr_a_testsys.tex
+++ b/p5/spr_a_testsys.tex
@@ -400,7 +400,7 @@ $\overline{e}(q_\gamma)$ при применении группы методов
 
 На рис.~\ref{atu:f:spr_a_qg_Fq3rlFvnAAF_q_x2} представлены зависимости
 $\overline{e}(q_\gamma)$ при применении методов Fq3rlFvnAAF.$q_{x^2}$.
-Опять же, наблюдается полная аналогия. Отличие от системы Лоренса наблюдается только
+Опять же, наблюдается полная аналогия. Отличие от системы Лоренца наблюдается только
 в левой части графика, где рост ошибок при
 малых значениях $q_\gamma$ замаскирован большим общим уровнем ошибки идентификации.
 Для данной системы рассматриваемый диапазон недостаточен для наблюдения этого эффекта,
