--- a/p3/p3.tex
+++ b/p3/p3.tex
@@ -4196,4 +4196,4 @@ $2 t_{ua}$. Поведение методов, использующих вели
 
 % }}}1
 
-% vim: fdm=marker foldlevelstart=2 fdc=4 ft=tex
+% vim: fdm=marker foldlevel=1 foldignore="%#" fdc=4 ft=tex
