Small bib fixes

--- a/atuworks.bib
+++ b/atuworks.bib
@@ -28,6 +28,19 @@
 }
 
 % РИНЦ, elib
+@Article{atu_asau12,
+  title = {Адаптивно-поисковая идентификация хаотической динамической системы Дуффинга},
+  xdata = {asau},
+  author = atum,
+  keywords = {atuw, scimetr},
+  language     = {russian},
+  langid       = {russian},
+  year = {2008},
+  number = {12(32)},
+  pages = {166--171}
+}
+
+% РИНЦ, elib
 @Article{atu_asau14,
   title = {Адаптивно-поисковая идентификация хаотической динамической системы Рёсслера},
   xdata = {asau},
@@ -431,18 +444,6 @@
   pages = {136--142}
 }
 
-% РИНЦ, elib
-@Article{atu_asau12,
-  title = {Адаптивно-поисковая идентификация хаотической динамической системы Дуффинга},
-  xdata = {asau},
-  author = atum,
-  keywords = {atuw, vak},
-  language     = {russian},
-  langid       = {russian},
-  year = {2008},
-  number = {12(32)},
-  pages = {166--171}
-}
 
 %@Article{atu_aaeks22,
 %  title = {Исследование правил клеточных автоматов для моделирования процессов затвердевания квазиравновесных бинарных сплавов},
@@ -685,13 +686,14 @@
   title = {Criteria synthesis problem for the chaotic systems identification},
   author = atume,
   keywords = {atuw, confer},
-  booktitle = {Proceedings of the 2016 IEEE 1st International Conference on Data Stream Mining and Processing, DSMP 2016, (Web of Science, Scopus, РИНЦ)},
+  booktitle = {Proceedings of the 2016 IEEE 1st International Conference on Data Stream Mining and Processing, DSMP 2016, (Web of Science, Scopus, РИНЦ, CrossRef)},
   location = {Lviv, Ukraine},
   language     = {english},
   langid       = {english},
   year = {2016},
   month = {8},
-  pages = {125--128}
+  pages = {125--128},
+  doi = {10.1109/DSMP.2016.7583522}
 }
 
 
